--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
-@cedcommerce:registry=https://npm.pkg.github.com/cedcommerce
+@cedcommerce:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=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
+
+
